Заканчивает выполнение ДЗ 1

--- a/index.html
+++ b/index.html
@@ -1,10 +1,179 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <ul>
+        <li>
+          <p><span lang="en">Web Studio</span></p>
+        </li>
+        <li>
+          <p>Студия</p>
+        </li>
+        <li>
+          <p>Портфолио</p>
+        </li>
+        <li>
+          <p>Контакты</p>
+        </li>
+        <li>
+          <p>
+            <a
+              href="http://info@devstudio.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              >info@devstudio.com</a
+            >
+          </p>
+        </li>
+        <li>
+          <p>+38 096 111 11 11</p>
+        </li>
+      </ul>
+    </header>
+    <section>
+      <h2>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h2>
+      <p><button type="button">Заказать услугу</button></p>
+    </section>
+    <section>
+      <ul>
+        <li>
+          <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+          <p>
+            Идейные соображения, а также начало повседневной работы п
+            оформированию позиции
+          </p>
+        </li>
+        <li>
+          <h3>ПУНКТУАЛЬНОСТЬ</h3>
+          <p>
+            Задача организации, в особенность же рамки и место обучения кадров
+            влечет за собой
+          </p>
+        </li>
+        <li>
+          <h3>ПЛАНИРОВАНИЕ</h3>
+          <p>
+            Равным образом консультация с широким активом в значительной степени
+            обуславливает
+          </p>
+        </li>
+        <li>
+          <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+          <p>
+            Значимость этих проблем настолько очевидна, что реализация плановых
+            заданий
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>ЧЕМ МЫ ЗАНИМАЕМСЯ</h2>
+      <ul>
+        <li>
+          <p>
+            <img
+              src="./images/coding.jpg"
+              width="300"
+              height="170"
+              alt="coding"
+            />
+          </p>
+        </li>
+        <li>
+          <p>
+            <img
+              src="./images/communication.jpg"
+              width="300"
+              height="170"
+              alt="communication"
+            />
+          </p>
+        </li>
+        <li>
+          <p>
+            <img
+              src="./images/device.jpg"
+              width="300"
+              height="170"
+              alt="device"
+            />
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>НАША КОМАНДА</h2>
+      <ul>
+        <li>
+          <p>
+            <img
+              src="./images/igor.jpg"
+              width="300"
+              height="170"
+              alt="Игорь Демьяненко"
+            />
+          </p>
+          <h3>Игорь Демьяненко</h3>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <p>
+            <img
+              src="./images/olga.jpg"
+              width="300"
+              height="170"
+              alt="Ольга Репина"
+            />
+          </p>
+
+          <h3>Ольга Репина</h3>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <p>
+            <img
+              src="./images/nikolay.jpg"
+              width="300"
+              height="170"
+              alt="Николай Тарасов"
+            />
+          </p>
+          <h3>Николай Тарасов</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <p>
+            <img
+              src="./images/mikhail.jpg"
+              width="300"
+              height="170"
+              alt="Михаил Ермаков"
+            />
+          </p>
+          <h3>Михаил Ермаков</h3>
+          <p>UI Designer</p>
+        </li>
+      </ul>
+    </section>
+    <footer>
+      <ul>
+        <li>
+          <p><span lang="en">Web Studio</span></p>
+        </li>
+        <li>
+          <p>г. Киев, пр-т Леси Украинки, 26</p>
+          <address>
+            <p>info@devstudio.com</p>
+            <p>+38 096 111 11 11</p>
+          </address>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
