Исправляет ошибки ДЗ

--- a/index.html
+++ b/index.html
@@ -8,38 +8,34 @@
   </head>
   <body>
     <header>
+      <nav>
+        <ul>
+          <li>
+            <a href="" class="header-logo">Web<span>Studio</span></a>
+          </li>
+          <li>
+            <a href="">Студия</a>
+          </li>
+          <li>
+            <a href="">Портфолио</a>
+          </li>
+          <li>
+            <a href="">Контакты</a>
+          </li>
+        </ul>
+      </nav>
       <ul>
-        <li>
-          <nav>
-            <a href="" class="header-logo"><span>Web</span>Studio</a>
-          </nav>
-        </li>
-        <li>
-          <p>Студия</p>
-        </li>
-        <li>
-          <p>Портфолио</p>
-        </li>
-        <li>
-          <p>Контакты</p>
-        </li>
+        <li><a href="">info@devstudio.com</a></li>
+        <li><a href="">+38 096 111 11 11</a></li>
       </ul>
-      <p>
-        <a
-          href="http://info@devstudio.com"
-          target="_blank"
-          rel="noopener noreferrer"
-          >info@devstudio.com</a
-        >
-      </p>
-      <p>+38 096 111 11 11</p>
     </header>
     <main>
       <section>
         <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-        <p><button type="button">Заказать услугу</button></p>
+        <button type="button">Заказать услугу</button>
       </section>
       <section>
+        <h2>ОСОБЕННОСТИ</h2>
         <ul>
           <li>
             <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
@@ -76,12 +72,7 @@
         <ul>
           <li>
             <p>
-              <img
-                src="./images/coding.jpg"
-                width="300"
-                height="170"
-                alt="coding"
-              />
+              <img src="./images/coding.jpg" width="300" alt="coding" />
             </p>
           </li>
           <li>
@@ -89,19 +80,13 @@
               <img
                 src="./images/communication.jpg"
                 width="300"
-                height="170"
                 alt="communication"
               />
             </p>
           </li>
           <li>
             <p>
-              <img
-                src="./images/device.jpg"
-                width="300"
-                height="170"
-                alt="device"
-              />
+              <img src="./images/device.jpg" width="300" alt="device" />
             </p>
           </li>
         </ul>
@@ -111,52 +96,40 @@
         <ul>
           <li>
             <p>
-              <img
-                src="./images/igor.jpg"
-                width="300"
-                height="170"
-                alt="Игорь Демьяненко"
-              />
+              <img src="./images/igor.jpg" width="300" alt="Игорь Демьяненко" />
             </p>
             <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
             <p>
-              <img
-                src="./images/olga.jpg"
-                width="300"
-                height="170"
-                alt="Ольга Репина"
-              />
+              <img src="./images/olga.jpg" width="300" alt="Ольга Репина" />
             </p>
 
             <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <p>
               <img
                 src="./images/nikolay.jpg"
                 width="300"
-                height="170"
                 alt="Николай Тарасов"
               />
             </p>
             <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <p lang="en">Marketing</p>
           </li>
           <li>
             <p>
               <img
                 src="./images/mikhail.jpg"
                 width="300"
-                height="170"
                 alt="Михаил Ермаков"
               />
             </p>
             <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -164,13 +137,13 @@
     <footer>
       <ul>
         <li>
-          <p><span lang="en">Web Studio</span></p>
+          <a href="">Web<span>Studio</span></a>
         </li>
         <li>
           <p>г. Киев, пр-т Леси Украинки, 26</p>
           <address>
-            <p>info@devstudio.com</p>
-            <p>+38 096 111 11 11</p>
+            <li><a href="">info@devstudio.com</a></li>
+            <li><a href="">+38 096 111 11 11</a></li>
           </address>
         </li>
       </ul>
