Финализирует исправления ДЗ1

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <header>
       <nav>
+        <p>
+          <a href="" class="header-logo">Web<span>Studio</span></a>
+        </p>
         <ul>
-          <li>
-            <a href="" class="header-logo">Web<span>Studio</span></a>
-          </li>
           <li>
             <a href="">Студия</a>
           </li>
@@ -95,39 +95,22 @@
         <h2>НАША КОМАНДА</h2>
         <ul>
           <li>
-            <p>
-              <img src="./images/igor.jpg" width="300" alt="Игорь Демьяненко" />
-            </p>
+            <img src="./images/igor.jpg" width="300" alt="Игорь Демьяненко" />
             <h3>Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
-            <p>
-              <img src="./images/olga.jpg" width="300" alt="Ольга Репина" />
-            </p>
-
+            <img src="./images/olga.jpg" width="300" alt="Ольга Репина" />
             <h3>Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <p>
-              <img
-                src="./images/nikolay.jpg"
-                width="300"
-                alt="Николай Тарасов"
-              />
-            </p>
+            <img src="./images/nikolay.jpg" width="300" alt="Николай Тарасов" />
             <h3>Николай Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
-            <p>
-              <img
-                src="./images/mikhail.jpg"
-                width="300"
-                alt="Михаил Ермаков"
-              />
-            </p>
+            <img src="./images/mikhail.jpg" width="300" alt="Михаил Ермаков" />
             <h3>Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
           </li>
@@ -135,18 +118,16 @@
       </section>
     </main>
     <footer>
-      <ul>
-        <li>
-          <a href="">Web<span>Studio</span></a>
-        </li>
-        <li>
-          <p>г. Киев, пр-т Леси Украинки, 26</p>
-          <address>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+38 096 111 11 11</a></li>
-          </address>
-        </li>
-      </ul>
+      <p>
+        <a href="">Web<span>Studio</span></a>
+      </p>
+      <p>г. Киев, пр-т Леси Украинки, 26</p>
+      <address>
+        <ul>
+          <li><a href="">info@devstudio.com</a></li>
+          <li><a href="">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
